# GMMPointSetRegistration

./: CMakeLists.txt  README.md  gmmPointSetRegistration.cxx  gmmTransformMesh.cxx
application/: CMakeLists.txt  registration.cxx  statistics.cxx  transform.cxx
apps/: CMakeLists.txt  gmmPointSetRegistration.cxx  gmmTransformMesh.cxx  gmmstatistics.cxx  icpPointSetRegistration.cxx
data/face/: face_1.vtk  face_2.vtk
gmm/: CMakeLists.txt  itkAddNoiseAndTransformMeshFilter.h  itkGMMICPPointSetToPointSetMetric.h  itkGMMICPPointSetToPointSetMetric.hxx  itkGMMKCKdTreePointSetToPointSetMetric.h  itkGMMKCKdTreePointSetToPointSetMetric.hxx  itkGMMKCPointSetToPointSetMetric.h  itkGMMKCPointSetToPointSetMetric.hxx  itkGMML2PointSetToPointSetMetric.h  itkGMML2PointSetToPointSetMetric.hxx  itkGMML2RigidPointSetToPointSetMetric.h  itkGMML2RigidPointSetToPointSetMetric.hxx  itkGMMMLEPointSetToPointSetMetric.h  itkGMMMLEPointSetToPointSetMetric.hxx  itkGMMPointSetToPointSetMetric.h  itkGMMPointSetToPointSetMetric.hxx  itkGMMPointSetToPointSetMetricBase.h  itkGMMPointSetToPointSetMetricBase.hxx  itkGMMPointSetToPointSetRegistrationMethod.h  itkGMMPointSetToPointSetRegistrationMethod.hxx  itkGMMRegstrationUtils.h  itkGMMRigidPointSetToPointSetMetric.h  itkGMMRigidPointSetToPointSetMetric.hxx  itkGMMScalePointSetMetric.h  itkGMMScalePointSetMetric.hxx  itkGMMScalePointSetMetricEstimator.h  itkGMMScalePointSetMetricEstimator.hxx  itkGMMSigmaMetric.h  itkGMMSigmaMetric.hxx  itkGenerateRandomTransform.h  itkICPPointSetToPointSetMetric.h  itkICPPointSetToPointSetMetric.hxx  itkInitializeMetric.h  itkInitializeRandomTransform.h  itkInitializeTransform.h  itkNormalizePointSet.h  itkPointSetPropertiesCalculator.h  itkPointSetToPointSetMetrics.h  itkRandomTransformMeshFilter.h  ssmPointSetToPointSetMetrics.h
initializer/: CMakeLists.txt  itkInitializeMetric.h
mesh/: CMakeLists.txt
pointset/: CMakeLists.txt  itkPointSetToPointSetMetrics.h
python/: CMakeLists.txt  example.cpp
transform/: CMakeLists.txt  itkTransformAndAddNoiseMeshFilter.h
utils/: CMakeLists.txt  agtkCommandIterationUpdate.h  agtkCommandLineArgumentParser.h  agtkCommandLineArgumentParser.hxx  agtkIO.h  agtkObservers.h  agtkTypes.h  argsCustomParsers.h  itkIOutils.h
